[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-simple-nat-tunnel"
version = "0.5.1"
description = "A small Python TCP reverse tunnel compatible with common frp/rathole config subsets."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "GGN_2015" }
]
keywords = ["frp", "rathole", "reverse-proxy", "tunnel", "nat-traversal"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: System :: Networking"
]
dependencies = [
  "cryptography>=43.0.0",
  "packaging>=24.0",
  "py-admin-launch>=0.1.3",
  "tomli>=2.0.1; python_version < '3.11'"
]

[project.urls]
Homepage = "https://github.com/GGN-2015/py-frp"
Repository = "https://github.com/GGN-2015/py-frp"
Issues = "https://github.com/GGN-2015/py-frp/issues"

[project.scripts]
py-frp = "py_frp.cli:main"
pyfrp = "py_frp.cli:main"
py-frps = "py_frp.cli:server_main"
py-frpc = "py_frp.cli:client_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
py_frp = ["py.typed"]
