[metadata]
name = py-simple-nat-tunnel
version = 0.7.0
description = A small Python TCP reverse tunnel compatible with common frp/rathole config subsets.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = GGN_2015
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: AsyncIO
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Internet :: Proxy Servers
    Topic :: System :: Networking

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    cryptography==3.2.1; python_version < "3.7"
    cryptography>=43.0.0; python_version >= "3.7"
    packaging>=21.3,<22; python_version < "3.7"
    packaging>=24.0; python_version >= "3.7"
    py-admin-launch>=0.2.0
    dataclasses>=0.8; python_version < "3.7"
    importlib-metadata>=4.8.3,<5; python_version < "3.8"
    tomli>=1.2.3,<2; python_version < "3.7"
    tomli>=2.0.1; python_version >= "3.7" and python_version < "3.11"

[options.packages.find]
where = src

[options.package_data]
py_frp = py.typed

[options.entry_points]
console_scripts =
    py-frp = py_frp.cli:main
    pyfrp = py_frp.cli:main
    py-frps = py_frp.cli:server_main
    py-frpc = py_frp.cli:client_main
